--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -81,12 +81,31 @@ Här ska vi ha en sammanfattning av rapporten. Det ska vara en punktlista med de
 
 Här kommer en introduktion till rapporten. Det ska vara en kort text som förklarar vad rapporten handlar om och vad läsaren kan förvänta sig att hitta i rapporten.
 
-*Vad är integration och varför är det viktigt?*
+Integration är ett område som är ständigt aktuellt i samhällsdebatten. Begreppet kan ses som en process där  *individer eller grupper med olika bakgrunder och förutsättningar blir en del av ett större socialt, ekonomiskt eller kulturellt sammanhang, samtidigt som deras egen identitet och särart respekteras*.
+
+Beroende på sammanhang kan integration ha olika betydelser:
+<br>
+<ul>
+
+<li>Samhällelig integration: När människor med olika bakgrunder deltar i och bidrar till samhället på lika villkor, exempelvis genom arbete, utbildning och social interaktion. </li>
+
+</li>Ekonomisk integration: Att individer eller grupper har tillgång till arbetsmarknaden och ekonomiska resurser, vilket minskar ekonomiska klyftor. </li>
+
+</li>Kulturell integration: När olika kulturer möts och påverkar varandra utan att någon tvingas ge upp sin identitet. </li>
+
+<br>
+
+En viktig del att belysa i ett integrationsperspektiv är hur utrikes födda förhåller sig till inrikes födda inom ett antal samhällsområden. Det kan vara utbildning, arbetsmarknad, boende. Den här rapportens syfte är att redovisa aktuell statistik relaterat till utrikes föddas integration i samhället i Dalarna.
+
+
 
 # Bakgrund
-Referera till rapporten från 2019
 
-Var står vi nu?
+*Referera till rapporten från 2019*
+
+*Var står vi nu?*
+
+*Vad är integration och varför är det viktigt?*
 
 ## Den utrikes födda befolkningen i Sverige och i Dalarna
 För att få en förståelse för den utrikes födda befolkningen i Dalarna och hur invandringen sett ut över tid, behöver situationen i riket som helhet analyseras. Den första större invandring som påverkat Dalarna i modern tid var den arbetskraftsinvandring som skedde efter andra världskriget. Denna epok varade i stort sett under två decennier, d.v.s. under 1950- och 1960-talet.
